# dorm-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  readme.md  to-do.md  users.csv  users_output_01.07.2024.csv  users_output_13.05.2024.csv
core/api/v1/: urls.py
core/apps/common/: exceptions.py  services.py  utils.py  validators.py
core/apps/duties/: admin.py  apps.py  exceptions.py  models.py  services.py
core/apps/laundry/: admin.py  apps.py  exceprtions.py  exceptions.py  models.py  services.py
core/apps/proposals/: admin.py  apps.py  choices.py  exceptions.py  models.py
core/apps/reports/: admin.py  services.py  tasks.py
core/apps/rooms/: admin.py  apps.py  choices.py  exceptions.py  models.py  services.py
core/apps/users/: admin.py  exceptions.py  managers.py  models.py  services.py
core/project/: celery.py  urls.py
core/project/settings/: __init__.py  local_example.py  main.py
docker-compose/: app.yaml  nginx.yaml  storages.yaml
docs/: api-refactor.md  to-do-plan.md
nginx/: nginx.conf
static/reports/scripts/: reports_common.js  room_report.js  schedule_report.js
templates/reports/: datepicker.html  duty_schedule_report.html  index.html  room_records_report.html
tests/: conftest.py
tests/authentication_tests/: login_test.py
tests/common_tests/: utils_test.py
tests/duties_tests/: services_test.py
tests/duties_tests/api_tests/: duty_records_viewset_test.py  (+3 more)
tests/laundry_tests/: records_test.py
tests/rooms_tests/: create_room_records_test.py  room_records_test.py
(+70 files in other folders)
