[tool.poetry]
name = "distribution-service"
version = "0.1.0"
description = ""
authors = ["Nikeshhh <WityazKajit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-environ = "^0.11.2"
djangorestframework = "3.15.2"
django-cors-headers = "^4.3.1"
pre-commit = "^3.6.2"
ruff = "^0.3.1"
pytest = "^8.0.2"
pytest-django = "^4.8.0"
coverage = "^7.5.3"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
sqlparse = "0.5.0"
celery = "^5.4.0"
redis = "^5.0.7"
django-celery-beat = "^2.6.0"
django-celery-results = "^2.5.1"
setuptools = "^70.3.0"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.project.settings"